--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "moment": "^2.29.4",
     "mongoose": "^6.4.3",
     "nodemon": "^2.0.19"
   }
